@@ -9070,3 +9070,290 @@ Apply Cancel
 Save Settings
 Allow All
 [![Powered by Onetrust](https://cdn.cookielaw.org/logos/static/powered_by_logo.svg)](https://www.onetrust.com/solutions/consent-and-preferences/)
+
+
+---
+# ORIGEN: https://www.cisco.com/c/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html
+
+  * [Skip to content](https://www.cisco.com/c/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html#eot-doc-wrapper)
+  * [Skip to search](https://www.cisco.com/c/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html)
+  * [Skip to footer](https://www.cisco.com/c/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html)
+
+
+  * [Cisco.com Worldwide](https://www.cisco.com/site/us/en/index.html)
+  * [Products and Services](https://www.cisco.com/site/us/en/products/index.html)
+  * [Solutions](https://www.cisco.com/site/us/en/solutions/index.html)
+  * [Support](https://www.cisco.com/c/en/us/support/index.html)
+  * [Learn](https://www.cisco.com/site/us/en/learn/index.html)
+  * [Explore Cisco](https://www.cisco.com/site/us/en/about/sitemap.html)
+  * [How to Buy](https://www.cisco.com/site/us/en/buy/index.html)
+  * [Partners Home](https://www.cisco.com/site/us/en/partners/index.html)
+  * [Partner Program](https://www.cisco.com/site/us/en/partners/360-partner-program/partner-program/index.html)
+  * [Support](https://www.cisco.com/site/us/en/partners/support-help/index.html)
+  * [Tools](https://www.cisco.com/site/us/en/partners/360-partner-program/tools-training/index.html)
+  * [Find a Cisco Partner](https://locatr.cloudapps.cisco.com/WWChannels/LOCATR/pf/index.jsp#/)
+  * [Meet our Partners](https://www.cisco.com/site/us/en/partners/connect-with-a-partner/index.html)
+  * [Become a Cisco Partner](https://www.cisco.com/site/us/en/partners/index.html)
+
+
+  * [](https://www.cisco.com/c/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html)
+  * [...](https://www.cisco.com/c/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html)Show All Breadcrumbs
+  * [Support](https://www.cisco.com/c/en/us/support/index.html)
+  * [Product Support](https://www.cisco.com/c/en/us/support/all-products.html)
+  * [Contact Center](https://www.cisco.com/c/en/us/support/contact-center/category.html)
+  * [Cisco Unified Contact Center Enterprise](https://www.cisco.com/c/en/us/support/customer-collaboration/unified-contact-center-enterprise/series.html)
+  * [Install and Upgrade TechNotes](https://www.cisco.com/c/en/us/support/customer-collaboration/unified-contact-center-enterprise/tsd-products-support-install-and-upgrade-technotes-list.html)
+
+
+# Upgrade Apache Tomcat Manually
+![](https://www.cisco.com/etc/designs/cdc/fw/i/TAC_lg-icon.png)
+Save
+[Log in](https://www.cisco.com/c/login/index.html?referer=/c/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html) to Save Content 
+[ Translations ](https://www.cisco.com/c/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html)
+Download
+Print
+### Available Languages
+  * [Arabic - عربي](https://www.cisco.com/c/ar_ae/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html)
+  * [Brazil - Português](https://www.cisco.com/c/pt_br/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html)
+  * [Canada - Français](https://www.cisco.com/c/fr_ca/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html)
+  * [China - 简体中文](https://www.cisco.com/c/zh_cn/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html)
+  * [China - 繁體中文 (臺灣)](https://www.cisco.com/c/zh_tw/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html)
+  * [Germany - Deutsch](https://www.cisco.com/c/de_de/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html)
+  * [Italy - Italiano](https://www.cisco.com/c/it_it/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html)
+  * [Japan - 日本語](https://www.cisco.com/c/ja_jp/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html)
+  * [Korea - 한국어](https://www.cisco.com/c/ko_kr/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html)
+  * [Latin America - Español](https://www.cisco.com/c/es_mx/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html)
+  * [Netherlands - Nederlands](https://www.cisco.com/c/nl_nl/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html)
+
+
+### Download Options
+  * [PDF](https://www.cisco.com/c/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.pdf) (2.0 MB)   
+View with Adobe Reader on a variety of devices
+  * [ePub](https://www.cisco.com/c/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.epub) (2.3 MB)   
+View in various apps on iPhone, iPad, Android, Sony Reader, or Windows Phone
+  * [Mobi (Kindle)](https://www.cisco.com/c/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.mobi) (1.6 MB)   
+View on Kindle device or Kindle app on multiple devices
+
+
+Updated:March 28, 2025
+Document ID:222803
+Bias-Free Language
+### Bias-Free Language
+The documentation set for this product strives to use bias-free language. For the purposes of this documentation set, bias-free is defined as language that does not imply discrimination based on age, disability, gender, racial identity, ethnic identity, sexual orientation, socioeconomic status, and intersectionality. Exceptions may be present in the documentation due to language that is hardcoded in the user interfaces of the product software, language used based on RFP documentation, or language that is used by a referenced third-party product. [Learn more](https://www.cisco.com/site/us/en/about/purpose/social-impact/inclusive-language-policy.html) about how Cisco is using Inclusive Language.
+## Contents
+[Introduction](https://www.cisco.com/c/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html#toc-hId-652075804)
+[Prerequisites](https://www.cisco.com/c/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html#toc-hId-455562299)
+[Requirements](https://www.cisco.com/c/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html#toc-hId-388131513)
+[Components Used](https://www.cisco.com/c/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html#toc-hId-191618008)
+[Upgrade](https://www.cisco.com/c/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html#toc-hId--133978216)
+[Before Upgrade](https://www.cisco.com/c/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html#toc-hId--201409002)
+[Uninstall the Current Tomcat](https://www.cisco.com/c/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html#toc-hId--594436012)
+[Install Tomcat](https://www.cisco.com/c/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html#toc-hId--866180886)
+[Backup Tomcat Folder to Delete Tomcat Directories](https://www.cisco.com/c/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html#toc-hId--1259207896)
+[Copy Tomcat Files](https://www.cisco.com/c/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html#toc-hId--1652234906)
+[Add Missing Files](https://www.cisco.com/c/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html#toc-hId--1848748411)
+[Enable Inheritance and Start the Tomcat Service](https://www.cisco.com/c/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html#toc-hId--2045261916)
+[Verify](https://www.cisco.com/c/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html#toc-hId--1948372414)
+## Introduction
+This document describes how to manually upgrade Apache Tomcat on CCE.
+## Prerequisites
+### Requirements
+Cisco recommends that you have knowledge of these topics:
+  * Contact Center Enterprise (CCE) 12.6
+  * Apache Tomcat
+
+
+### Components Used
+The information in this document is based on these software and hardware versions:
+  * CCE 12.6
+  * Apache Tomcat 9.x
+
+
+The information in this document was created from the devices in a specific lab environment. All of the devices used in this document started with a cleared (default) configuration. If your network is live, ensure that you understand the potential impact of any command.
+## Upgrade
+In most instances, updating Tomcat using Cisco Upgrade Tomcat Utility resolves vulnerabilities. There are times when upgrading Tomcat fails, configuration is corrupt, or a new person updates Tomcat using the files they find Online.
+[![caution-icon](https://www.cisco.com/c/dam/en/us/td/i/templates/caut.gif)](https://www.cisco.com/c/dam/en/us/td/i/templates/caut.gif "caution-icon")
+**Caution** : Please take a VM snapshot before starting this procedure. Contact TAC for any assistance.
+### Before Upgrade
+  1. Download the Tomcat installer (apache-tomcat-version.exe) from the Tomcat website: <http://archive.apache.org/dist/tomcat/tomcat-9/>.
+  2. Copy the installer onto the Unified CCE component VMs. In this upgrade, I used tomcat version 9.0.89.
+
+
+[![Index /dist/tomcat](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-00.png)](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-00.png "Index /dist/tomcat")
+In this lab, an AW server was used to upgrade Tomcat.
+### Uninstall the Current Tomcat
+Step 1. Stop the distributor service:
+[![Stop the Distributor Service](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-01.png)](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-01.png "Stop the Distributor Service")
+Step 2. Stop the Tomcat, IIS admin and World wide web service from windows services.msc.
+Open Services.msc:
+[![Open Services.msc](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-02.png)](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-02.png "Open Services.msc")
+[![Click Apache Tomcat9](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-03.png)](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-03.png "Click Apache Tomcat9")
+[![Click IIS Admin Services](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-04.png)](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-04.png "Click IIS Admin Services")
+[![Click World Wide Web](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-05.png)](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-05.png "Click World Wide Web")
+Step 3. Uninstall Existing Tomcat Version from Add/Remove programs.
+1. Open **Control Panel > Program and Features > Select Tomcat**:
+  
+[![Open Control Panel](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-06.png)](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-06.png "Open Control Panel")
+[![Click Uninstall or Change](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-07.png)](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-07.png "Click Uninstall or Change")
+2. Click**Uninstall/Change** :
+[![Uninstall or Change](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-08.png)](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-08.png "Uninstall or Change")
+[![Advanced Security Settings for Tomcat](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-09.png)](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-09.png "Advanced Security Settings for Tomcat")
+[![Remove All Files in Apache Tomcat](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-10.png)](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-10.png "Remove All Files in Apache Tomcat")
+[![Uninstallation Complete](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-11.png)](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-11.png "Uninstallation Complete")
+### Install Tomcat
+Step 1. Copy the Apache Tomcat installer (the EXE file) to c:\Temp:
+[![Install Tomcat](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-12.png)](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-12.png "Install Tomcat")
+Step 2. From CMD as administrator run the installer using this command:
+[![note-icon](https://www.cisco.com/c/dam/en/us/td/i/templates/note.gif)](https://www.cisco.com/c/dam/en/us/td/i/templates/note.gif "note-icon")
+**Note** : Your version can be different: C:\temp\apache-tomcat-9.0.89.exe /s /D=C:\icm\tomcat.
+[![Installation Prompts](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-13.png)](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-13.png "Installation Prompts")
+Step 3. Proceed with the prompts to install. There is only one option you need to modify or search, and that is for the JRE folder.
+[![Proceed with Installation](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-14.png)](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-14.png "Proceed with Installation")
+### Backup Tomcat Folder to Delete Tomcat Directories
+Once the install is complete, prior to beginning work the Tomcat Folder needs to be backed up in case the need to start over.
+Step 1. Backup the Tomcat folder created:
+**c:\icm\tomcat**
+Step 2. Delete the directory, **'C:\icm\tomcat\webapps\docs’**
+Step 3. Delete the directory, **'C:\icm\tomcat\webapps\manager’**
+Step 4. Delete the directory,**'C:\icm\tomcat\webapps\ROOT'**
+### **Copy Tomcat Files**
+Step 1. Open CMD as administrator and run these 4 queries :
+  * **copy /Y C:\icm\bin\setup.war C:\icm\tomcat\webapps\setup.war**
+  * **copy /Y C:\icm\install\unifiedconfig.war C:\icm\tomcat\webapps\unifiedconfig.war**
+  * **copy /Y C:\icm\install\cceadmin.war C:\icm\tomcat\webapps\cceadmin.war**
+  * **copy /Y C:\icm\install\ccbu-common-shindig-server.war C:\icm\tomcat\webapps\ROOT.war**
+
+
+[![Open CMD as Administrator](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-15.png)](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-15.png "Open CMD as Administrator")
+Step 2. From the command prompt, execute these steps:
+  1. **"%CCE_JAVA_HOME%\bin\java" -cp C:\icm\bin Unzip C:\icm\install\unifiedconfig-realm-assembly.zip C:\icm\tomcat\lib**
+  2. **"%CCE_JAVA_HOME%\bin\java" -cp C:\icm\bin Unzip C:\icm\install\shindig-cache-assembly.zip C:\icm\tomcat\lib**
+
+
+[![Proceed with Steps at the Command Prompt](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-16.png)](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-16.png "Proceed with Steps at the Command Prompt")
+Step 3. From the command prompt, execute these steps to copy the jar files from ICM to tomcat directory:
+  1. **copy /Y C:\icm\bin\catalina.properties C:\icm\tomcat\conf\catalina.properties**
+  2. **copy /Y C:\icm\bin\icm-websetup-shared.jar C:\icm\tomcat\lib\icm-websetup-shared.jar**
+  3. **copy /Y C:\icm\bin\registry.jar C:\icm\tomcat\lib\registry.jar**
+  4. **copy /Y C:\icm\bin\jntservices.jar C:\icm\tomcat\lib\jntservices.jar**
+  5. **md C:\icm\tomcat\bin\i386 (Make Directory)**
+  6. **copy /Y C:\icm\bin\isapi_redirect.dll C:\icm\tomcat\bin\i386\isapi_redirect.dll**
+  7. **copy /Y C:\icm\bin\web.xml C:\icm\tomcat\conf\web.xml**
+  8. **copy /Y C:\icm\bin\catalina-jmx-remote.jar C:\icm\tomcat\lib\catalina-jmx-remote.jar**
+  9. **copy /Y C:\icm\install\web.config C:\icm\tomcat\bin\i386\web.config**
+  10. **copy /Y C:\icm\bin\server.xml.IIS.custom C:\icm\tomcat\conf\server.xml**
+
+
+[![Proceed with Next Steps at Command Prompt](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-17.png)](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-17.png "Proceed with Next Steps at Command Prompt")
+### Add Missing Files
+Step 1. In the next step, move over two files: uriworkermap.properties and workers.properties from a working server, where the Tomcat install is working correctly. 
+1. Notice the two files are missing.
+[![Two Files Missing](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-18.png)](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-18.png "Two Files Missing")2. Copy the missing files from a working server.
+[![Copy the Missing Files from a Working Server](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-19.png)](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-19.png "Copy the Missing Files from a Working Server")
+Step 2. Add missing registry information for options in Apache tomcat Registry key. 
+This information is Specific for ICM and is not added by default:
+**Computer\HKEY_LOCAL_MACHINE\SOFTWARE\WOW6432Node\Apache Software Foundation\Procrun 2.0\Tomcat9\Parameters\Java**
+Information added to options Key subsequent to the last line in Options. The subsequent string must be add including the hyphens present:
+-DICM_ROOT=C:\icm
+-Dcom.sun.management.jmxremote.ssl.need.client.auth=false
+-Dcom.sun.management.jmxremote.authenticate=false
+-Dcom.sun.management.jmxremote.port=1299
+-Dcom.sun.management.jmxremote.ssl=false
+-XX:MaxPermSize=128m
+-Dfile.encoding=UTF8
+-Dclient.encoding.override=UTF-8
+[![Add Missing Registry Information](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-20.png)](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-20.png "Add Missing Registry Information")
+### Enable Inheritance and Start the Tomcat Service
+Step 1. Last step before starting tomcat and IIS service is to validate inheritance for the folder. If you miss this step, a 500 internal server error is returned when IIS attempts to use the redirect isapi.dll file. 
+As IIS no longer has permissions for the Tomcat Folder:
+      1. Navigate to c:\icm\
+      2. Find the folder Tomcat.
+      3. Right click and select properties.
+      4. Choose **Security > Advanced**.
+      5. Click **Enable Inheritance**.
+      6. Click**Apply**.
+
+
+The user rights inherited are from c:\icm.
+[![Inherited User Rights](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-21.png)](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-21.png "Inherited User Rights")
+[![Advanced Security Settings for Tomcat](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-22.png)](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-22.png "Advanced Security Settings for Tomcat")
+Step 2. Verify the updated version is installed by running the **version** command:
+[![Verify the Updated Version](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-23.png)](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-23.png "Verify the Updated Version")
+Step 3. Start the distributor service.
+[![Start the Distributor Service](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-24.png)](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-24.png "Start the Distributor Service")
+Step 4. Start Apache Tomcat, IIS, and World wide web service from services.msc:
+[![Start Apache Tomcat, IIS and World Wide Web Service](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-25.png)](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-25.png "Start Apache Tomcat, IIS and World Wide Web Service")
+[![IIS Admin Service](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-26.png)](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-26.png "IIS Admin Service")
+[![World Wide Web Publishing](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-27.png)](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-27.png "World Wide Web Publishing")
+## Verify
+Validate if the cceadmin page loads without issues and able to log in:
+[![snechikk_12-1730558384372](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-28.png)](https://www.cisco.com/c/dam/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat-28.png "snechikk_12-1730558384372")
+### Revision History  
+| Revision  | Publish Date  | Comments  |  
+| --- | --- | --- |  
+| 1.0  |  28-Mar-2025   | Initial Release  |  
+[![Back to Top](https://www.cisco.com/etc/designs/cdc/fw/i/responsive/Default-bTop-36.svg)Back to Top](https://www.cisco.com/c/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html "Back to Top")
+![TAC Authored](https://www.cisco.com/etc/designs/cdc/fw/i/TAC_lg-icon.png)
+### Contributed by Cisco Engineers
+  * Sanoop N V
+Cisco TAC
+
+
+### Was this Document Helpful?
+Yes No [ ![Feedback](https://www.cisco.com/c/dam/cdc/i/Feedback_OceanBlue.png)Feedback](javascript:%20void\(0\);)
+### Contact Cisco
+  * [Open a Support Case](https://mycase.cloudapps.cisco.com/start?prodDocUrl=https://www.cisco.com/c/en/us/support/docs/contact-center/unified-contact-center-enterprise-1262/222803-manual-upgradation-of-apache-tomcat.html)![login required](https://www.cisco.com/etc/designs/cdc/fw/i/icon_lock_small.png)
+  * (Requires a [Cisco Service Contract](https://www.cisco.com/c/en/us/services/order-services.html))
+
+
+### This Document Applies to These Products
+  * [Packaged Contact Center Enterprise 12.6(2)](https://www.cisco.com/c/en/us/support/contact-center/packaged-contact-center-enterprise-12-6-2/model.html)
+  * [Unified Contact Center Enterprise 12.6(2)](https://www.cisco.com/c/en/us/support/contact-center/unified-contact-center-enterprise-12-6-2/model.html)
+
+
+By continuing to use our website, you acknowledge the use of cookies. 
+[Privacy Statement](https://www.cisco.com/c/en/us/about/legal/privacy-full.html) Change Settings
+![Company Logo](https://cdn.cookielaw.org/logos/03fc55fe-0057-4b2f-817d-763e7ecdb316/a7f4c642-c43c-4666-acea-858c0449029c/cisco-logo-transparent.png)
+## Consent Manager
+Your opt out preference signal is honored.
+## Consent Manager
+  * ### Your Privacy
+  * ### Strictly Necessary Cookies
+  * ### Performance Cookies
+  * ### Targeting Cookies
+  * ### Functional Cookies
+
+
+#### Your Privacy
+When you visit any website, it may store or retrieve information on your browser, mostly in the form of cookies. This information might be about you, your preferences or your device and is mostly used to make the site work as you expect it to. The information does not usually directly identify you, but it can give you a more personalized web experience. Because we respect your right to privacy, you can choose not to allow some types of cookies. From the list on left, please choose whether this site may use Performance and/or Targeting Cookies. By selecting Strictly Necessary Cookies only, you are requesting Cisco not to sell or share your personal data. Note, blocking some types of cookies may impact your experience on the site and the services we are able to offer.
+#### Strictly Necessary Cookies
+Always Active
+These cookies are necessary for the website to function and cannot be switched off in our systems. They are usually only set in response to actions made by you which amount to a request for services, such as setting your privacy preferences, logging in or filling in forms. You can set your browser to block or alert you about these cookies, but some parts of the site will not then work. These cookies do not store any personally identifiable information.
+Cookies Details
+#### Performance Cookies
+Performance Cookies
+These cookies provide metrics related to the performance and usability of our site. They are primarily focused on gathering information about how you interact with our site, including: page load times, response times, error messages, and allowing a replay of a visitor’s interactions with our site, which enables us to review and analyze visitor behavior, helping to improve site usability and functionality. These cookies also allow us to count visits and traffic sources so we can measure and improve the performance of our site. They help us to know which pages are the most and least popular and see how visitors move around the site. If you do not allow these cookies we will not know when you have visited our site and will not be able to monitor its performance.
+Cookies Details
+#### Targeting Cookies
+Targeting Cookies
+These cookies may be set through our site by our advertising partners. They may be used by those companies to build a profile of your interests and show you relevant adverts on other sites. They do not store directly personal information, but are based on uniquely identifying your browser and internet device. If you do not allow these cookies, you will experience less targeted advertising.
+Cookies Details
+#### Functional Cookies
+Functional Cookies
+These cookies enable the website to provide enhanced functionality and personalisation. They may be set by us or by third party providers whose services we have added to our pages. If you do not allow these cookies then some or all of these services may not function properly.
+Cookies Details
+Back Button
+### Cookie List
+Filter Button
+Consent Leg.Interest
+checkbox label label
+checkbox label label
+checkbox label label
+Clear
+  * checkbox label label
+
+
+Apply Cancel
+Save Settings
+Allow All
+[![Powered by Onetrust](https://cdn.cookielaw.org/logos/static/powered_by_logo.svg)](https://www.onetrust.com/solutions/consent-and-preferences/)
